# ProgettoSOA

./: .gitignore  CMakeLists.txt  Makefile  README.md  commands.h  tag_device_driver.c  tag_device_driver.h  tag_service.c  tag_service.h
lib/: usctm.c  usctm.h  vtpm.c  vtpm.h
user/: tag_ctl_test.c  tag_ctl_test.h  tag_get_test.c  tag_get_test.h  tag_receive_test.c  tag_receive_test.h  tag_send_test.c  tag_send_test.h  test_definitions.c  test_definitions.h  user_program.c  user_program.h  user_tests.c  user_tests.h
